--- a/NEWS
+++ b/NEWS
@@ -42,8 +42,12 @@ NEWS/ChangeLog for hydroTSM
                             -) default value for 'date.fmt' argument was changed from "%Y-%m-%d" to missing (it is automatically detected based on the sampling frequency of 'x')
                             -) default value for 'tstep' argument was changed from "days" to missing (it is automatically detected based on the sampling frequency of 'x')
         o 'hydrokrige'    : -) flagged as 'deprecated' (in the future it will be improved and moved into a different package)
+                            -) 'maptools::readShapePoly' only used in namespace-qualified form to reflect 'maptools' moving to a Suggests dependency.
         o 'season2names'  : fixed typo: 'autumm' -> 'autumn' (thanks to Belinda Wilson !)
-        o NAMESPACE file  : -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods
+        o 'mspplot'       : -) 'maptools::readShapePoly' only used in namespace-qualified form to reflect 'maptools' moving to a Suggests dependency.
+        o DESCRIPTION file: -) 'maptools' package was moved back to 'Suggests' from 'Imports' to reflect the pending archival of that package
+        o NAMESPACE file  : -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods.
+                            -) 'maptools::readShapePoly' no longer explicitly imported.
 
 
 0.6-0   11-Mar-2020
