--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,12 @@ NEWS/ChangeLog for hydroTSM
 --------------------------
 0.7-0   (under-development)
         o new function  : 'subhourly2hourly' for aggregating sub-hourly values into hourly ones.
+
         o new function  : 'subhourly2nminutes' for aggregating sub-hourly values into n-minutes ones.
+
         o new function  : 'monthlycurve' to plot monthly variation of streamflow (and optionally precipitation) values, with uncertainty bound around mean values.
+
+        o new function  : 'cmv' to compute the percentage/amounth of missing values in a zoo object, using a user-defined temporal scale.
 
         o 'hip'         :   -) new argument 'tz' to allow the user to specify the desired time zone. By default, "tz='UTC'", while previous versions implicitly used "tz=''" (local time zone)
 
@@ -31,20 +35,31 @@ NEWS/ChangeLog for hydroTSM
                             -) new argument 'temp.probs' to define the quantile values used to show uncertainty values around the monthly mean temperature values (and also around maximum and minimum temperature, when provided) 
                             -) new argument 'temp.probs.col' to define the colors used to show uncertainty values around the monthly mean temperature values (and also around maximum and minimum temperature, when provided) 
                             -) new argument 'temp.probs.alpha' to define the transparency level applied to 'temp.probs.col'
-                            -) new arguments 'lat' and 'lon' to define and show the latitude and longitude, respectively, for which the climograph was plotted for
-        o 'subdaily2daily': -) new argument 'start.fmt' to indicate the format used to provide 'start'
-                            -) new argument 'tz' to indicate the time zone used for both 'start' argument and the datetimes of the object
-        o 'daily2annual'  : -) for zoo objects, dates are correctly given in the output when FUN=min or FUN=max (e.g. for getting the date of the annual maximum or minimum)
-                            -) the '...' argument is now passed to FUN (thanks to Marfa Saldivia !))
-        o 'daily2monthly' : -) the '...' argument is now passed to FUN (thanks to Marfa Saldivia !))
-        o 'izoo2rzoo'     : -) improved handling of sub-daily time series
-                            -) new argument 'tz' to correctly handle sub-daily zoo objects (e.g., forcing UTC as time zone instead of the local time zone).
-                            -) default value for 'date.fmt' argument was changed from "%Y-%m-%d" to missing (it is automatically detected based on the sampling frequency of 'x')
-                            -) default value for 'tstep' argument was changed from "days" to missing (it is automatically detected based on the sampling frequency of 'x')
-        o 'hydrokrige'    : -) flagged as 'deprecated' (in the future it will be improved and moved into a different package)
-        o 'season2names'  : fixed typo: 'autumm' -> 'autumn' (thanks to Belinda Wilson !)
-        o NAMESPACE file  : -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods
+                            -) new arguments 'lat' and 'lon' to define and show the latitude and longitude, respectively, for which the climograph was plotted.
+
+        o '(sub)daily2monthly': -) new argument 'na.rm.thr' to define the maximum percentage of missing values allowed in each month to keep the monthly aggregated value in the output object.
+
+        o 'subdaily2daily'    : -) new argument 'start.fmt' to indicate the format used to provide 'start'
+                                -) new argument 'tz' to indicate the time zone used for both 'start' argument and the datetimes of the object
+
+        o 'daily2annual'      : -) for zoo objects, dates are correctly given in the output when FUN=min or FUN=max (e.g. for getting the date of the annual maximum or minimum)
+                                -) the '...' argument is now passed to FUN (thanks to Marfa Saldivia !))
+
+        o 'daily2monthly'     : -) the '...' argument is now passed to FUN (thanks to Marfa Saldivia !))
+
+        o 'izoo2rzoo'         : -) improved handling of sub-daily time series
+                                -) new argument 'tz' to correctly handle sub-daily zoo objects (e.g., forcing UTC as time zone instead of the local time zone).
+                                -) default value for 'date.fmt' argument was changed from "%Y-%m-%d" to missing (it is automatically detected based on the sampling frequency of 'x')
+                                -) default value for 'tstep' argument was changed from "days" to missing (it is automatically detected based on the sampling frequency of 'x')
+
+        o 'hydrokrige'        : -) flagged as 'deprecated' (in the future it will be improved and moved into a different package)
+
+        o 'season2names'      : fixed typo: 'autumm' -> 'autumn' (thanks to Belinda Wilson !)
+
+        o NAMESPACE file      : -) 'hydroplot', 'sname2plot' and 'hypsometric' are now exported S3 methods
+
         o sp, gstat, automap, maptools, rgdal: removed from DESCRIPTION and NAMESPACE files, due to CRAN warning about the retirement (archiving) of rgdal, rgeos and maptools during October 2023
+
         o Removed functions: hydrokrige, mspplot, gists2spt, because of the removal of sp, gstat, automap, maptools, rgdal packages from from DESCRIPTION and NAMESPACE files. These functions should be available in other spatial R packages (e.g., terra)
 
 
