--- a/vignettes/hydroTSM_Vignette-knitr.Rmd
+++ b/vignettes/hydroTSM_Vignette-knitr.Rmd
@@ -1,6 +1,5 @@
 ---
-title: <center>Tutorial for Introductory Analysis of
- Daily Precipitation Data with `hydroTSM`</center>
+title: Tutorial for Introductory Analysis of Daily Precipitation Data with `hydroTSM`
 author:
 - Mauricio Zambrano-Bigiarini^[mauricio.zambrano@ufrontera.cl]
 date: " version 0.8, 30-Nov-2023"
@@ -58,12 +57,6 @@ data(SanMartinoPPts)
 x <- window(SanMartinoPPts, start=as.Date("1985-01-01"))
 ```
 
-*  Global view of daily precipitation values a calendar heatmap:
-
-```{r calendarHeatmap}
-calendarHeatmap(x)
-```
-
 *  Dates of the daily values of 'x'
 ```{r Dates}
 dates <- time(x)
@@ -74,7 +67,11 @@ dates <- time(x)
 ( nyears <- yip(from=start(x), to=end(x), out.type="nmbr" ) )
 ```
 
+*  Global view of daily precipitation values a calendar heatmap (six years maximum):
 
+```{r calendarHeatmap, fig.width=8.6, fig.height=8.7}
+calendarHeatmap(x)
+```
 
 
 # Basic exploratory data analysis (EDA)
