--- a/vignettes/hydroTSM_Daily_Q_Vignette-knitr.Rmd
+++ b/vignettes/hydroTSM_Daily_Q_Vignette-knitr.Rmd
@@ -2,7 +2,7 @@
 title: Tutorial for Introductory Analysis of Daily Streamflow Data with `hydroTSM`
 author:
 - Mauricio Zambrano-Bigiarini^[mauricio.zambrano@ufrontera.cl]
-date: "version 0.1, 16-Jan-2024"
+date: "version 0.1, 17-Jan-2024"
 output:
   html_document:
     df_print: paged
@@ -100,8 +100,14 @@ dwi(Q, out.unit="mpy")
 ```
 
 4)  Percentage of days with missing data per month
-```{r cmv}
+```{r cmv1}
 cmv(Q, tscale="month")
+```
+
+Identifying months with more than 10 percent of missing data:
+```{r cmv2}
+index <- which(cmv(Q, tscale="month") >= 0.1)
+time(Q[index])
 ```
 
 5) Computation of monthly values only when the percentage of NAs in each month is lower than a user-defined percentage (10% in this example).
@@ -113,7 +119,7 @@ cmv(Q, tscale="month")
 
 
 
-4)  Basic exploratory figures:
+6)  Basic exploratory figures:
 
 Using the *hydroplot* function, which (by default) plots 9 different graphs: 3 ts plots, 3 boxplots and 3 histograms summarizing 'x'. For this example, only daily and monthly plots are produced, and only data starting on 01-Jan-1987 are plotted.
 
